<resources>
    <string name="app_name">Projeto PI</string>

    <string name="ong_page">Página de ONG</string>
    <string name="adoption_page">Página de adoção</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="processo_de_ado_o_iniciado_com_sucesso">Processo de adoção iniciado com sucesso!</string>
    <string name="o_doador_recebeu_uma_notifica_o_autom_tica_informando_seu_interesse_em_adotar_o_animal">O doador recebeu uma notificação automática informando seu interesse em adotar o animal.</string>
    <string name="voltar_ao_in_cio">Voltar ao início</string>
    <string name="cadastrar_outro_animal">Cadastrar outro animal</string>
    <string name="seu_animal_foi_cadastrado">Seu animal foi cadastrado!</string>
    <string name="obrigado_por_ajudar_a_transformar_vidas_em_breve_algu_m_especial_pode_encontrar_e_se_encantar_com_esse_novo_amigo">Obrigado por ajudar a transformar vidas! Em breve alguém especial pode encontrar e se encantar com esse novo amigo!</string>
    <string name="lista_de_contatos">Lista de Contatos</string>
    <string name="como_deseja_se_cadastrar">Como deseja se cadastrar?</string>
    <string name="pessoa_f_sica">Pessoa Física</string>
    <string name="ong">ONG</string>
    <string name="continuar_com_google">Continuar com Google</string>
    <string name="continuar_com_facebook">Continuar com Facebook</string>
    <string name="encontrando_um_lar_para_seu_animal">Encontrando um lar para seu animal</string>
    <string name="criar_conta">Criar Conta</string>
    <string name="login">Login</string>
    <string name="ou_conecte_com_suas_redes_sociais">Ou conecte com suas redes sociais</string>
    <string name="filtros">Filtros</string>
    <string name="animal">Animal</string>
    <string name="c_es">Cães</string>
    <string name="gatos">Gatos</string>
    <string name="p_ssaros">Pássaros</string>
    <string name="roedores">Roedores</string>
    <string name="idade">Idade</string>
    <string name="menor_que_6_meses">Menor que 6 meses</string>
    <string name="entre_6_meses_e_2_ano_s">Entre 6 meses e 2 ano(s)</string>
    <string name="entre_2_e_5_ano_s">Entre 2 e 5 ano(s)</string>
    <string name="maior_que_5_ano_s">Maior que 5 ano(s)</string>
    <string name="aplicar_filtros">Aplicar filtros</string>
    <string name="voltar">Voltar</string>
    <string name="ilustra_o_de_localiza_o">Ilustração de Localização</string>
    <string name="informe_sua_localiza_o">Informe sua Localização</string>
    <string name="nos_informe_sua_localiza_o_para_receber_recomenda_es_de_pets_e_ongs_pr_ximas_de_voc">Nos informe sua localização para receber recomendações de pets e ONGs próximas de você!</string>
    <string name="cep">CEP</string>
    <string name="none"> </string>
    <string name="registrar">Registrar</string>
    <string name="estado">Estado</string>
    <string name="cidade">Cidade</string>
    <string name="digite_seu_email_e_senha">Digite seu email e senha.</string>
    <string name="email">Email</string>
    <string name="digite_seu_email">Digite seu email</string>
    <string name="senha">Senha</string>
    <string name="digite_sua_senha">Digite sua senha</string>
    <string name="mostrar_ou_ocultar_senha">Mostrar ou ocultar senha</string>
    <string name="entrar">Entrar</string>
    <string name="esqueceu_a_senha">Esqueceu a senha?</string>
    <string name="ainda_n_o_tem_uma_conta">Ainda não tem uma conta?</string>
    <string name="todo">TODO</string>
    <string name="doa_o_conclu_da">Doação concluída!</string>
    <string name="obrigado_por_fazer_parte_dessa_corrente_do_bem_sua_contribui_o_faz_toda_a_diferen_a_na_vida_de_quem_precisa">Obrigado por fazer parte dessa corrente do bem. Sua contribuição faz toda a diferença na vida de quem precisa.</string>
    <string name="minhas_informa_es">Minhas Informações</string>
    <string name="foto_da_institui_o">Foto da Instituição</string>
    <string name="editar_foto">Editar Foto</string>
    <string name="nome_da_institui_o">Nome da Instituição</string>
    <string name="cnpj">CNPJ</string>
    <string name="sim">Sim</string>
    <string name="aceita_doa_es">Aceita doações</string>
    <string name="contato">Contato</string>
    <string name="patroc_nios_ou_conv_nios">Patrocínios ou convênios?</string>
    <string name="avan_ar">Avançar</string>
    <string name="cnpj_da_ong">CNPJ da ONG</string>
    <string name="site">Site</string>
    <string name="telefone">Telefone</string>
    <string name="o_que_a_sua_ong_precisa">O que a sua ONG precisa?</string>
    <string name="realizar_cadastro">Realizar Cadastro</string>
    <string name="foto_de_perfil">Foto de Perfil</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="cpf">CPF</string>
    <string name="data_de_nascimento">Data de Nascimento</string>
    <string name="sexo">Sexo</string>
    <string name="feminino">Feminino</string>
    <string name="nome">Nome</string>
    <string name="meus_animais">Meus Animais</string>
    <string name="meu_endere_o">Meu Endereço</string>
    <string name="m_todos_de_pagamento">Métodos de Pagamento</string>
    <string name="minhas_doa_es">Minhas Doações</string>
    <string name="notifica_es">Notificações</string>
    <string name="ajuda">Ajuda</string>
    <string name="sobre">Sobre</string>
    <string name="sair">Sair</string>
    <string name="redefina_sua_senha">Redefina Sua Senha</string>
    <string name="informe_seu_e_mail">Informe seu e-mail</string>
    <string name="e_mail">E-mail</string>
    <string name="seuemail_exemplo_com">seuemail@exemplo.com</string>
    <string name="trocar_senha">Trocar Senha</string>
    <string name="hist_rico_m_dico">Histórico Médico</string>
    <string name="descri_o">Descrição</string>
    <string name="idade_em_meses">Idade (em meses)</string>
    <string name="ra_a">Raça</string>
    <string name="esp_cie">Espécie</string>
    <string name="cadastrar_animal">Cadastrar Animal</string>
    <string name="digite_seus_dados_para_completar_o_cadastro">Digite seus dados para completar o cadastro</string>
    <string name="usu_rio">Usuário</string>
    <string name="digite_seu_nome_de_usu_rio">Digite seu nome de usuário</string>
    <string name="j_tem_uma_conta">Já tem uma conta?</string>
    <string name="jo_o">João</string>
    <string name="praia_do_canto">Praia do Canto</string>
    <string name="aim_par_gabdu_et_d_autres_personnes">Aimé par Gabdu et d\'autres personnes</string>
    <string name="jo_o_meus_cachorros_tot_tutu_max_e_robson">João : Meus cachorros, Totó, Tutu, max e Robson.</string>
    <string name="voir_les_10_commentaires">Voir les 10 commentaires</string>
    <string name="arneo_paris_arneo">Arneo Paris Arneo</string>
    <string name="encontre_um_lar_para_o_seu_animal_com_adopet">Encontre um lar para o seu animal com AdoPet.</string>
    <string name="adotar">Adotar</string>
    <string name="informa_o">Informação</string>
    <string name="ampara_animal">Ampara Animal</string>
    <string name="nome_da_pessoa">Nome da pessoa</string>
    <string name="lorem_ipsum_dolor_sit_amet">Lorem ipsum dolor sit amet</string>
    <string name="respons_vel">Responsável</string>
    <string name="adicionar_foto_do_animal">Adicionar foto do animal</string>
    <string name="clique_para_adicionar_a_foto_do_animal">Clique para adicionar a foto do animal</string>
</resources>