<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:hint="@string/digite_seu_email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:fontFamily="@font/afacadmedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/afacadsemibold"
        android:text="@string/email"
        android:textColor="#7C7C7C"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUser" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/adopet" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/afacadsemibold"
        android:text="@string/criar_conta"
        android:textAlignment="textStart"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/afacadsemibold"
        android:text="@string/digite_seus_dados_para_completar_o_cadastro"
        android:textAlignment="textStart"
        android:textColor="#7C7C7C"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/afacadsemibold"
        android:text="@string/usu_rio"
        android:textColor="#7C7C7C"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2" />

    <EditText
        android:id="@+id/etUser"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:hint="@string/digite_seu_nome_de_usu_rio"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:fontFamily="@font/afacadmedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView4" />

    <EditText
        android:id="@+id/etSenha"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:hint="@string/digite_sua_senha"
        android:inputType="textPassword"
        android:padding="12dp"
        android:fontFamily="@font/afacadmedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView5" />

    <ImageView
        android:id="@+id/ivToggleSenha"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:contentDescription="@string/mostrar_ou_ocultar_senha"
        android:padding="4dp"
        android:src="@drawable/olhoocultar"
        app:layout_constraintBottom_toBottomOf="@id/etSenha"
        app:layout_constraintEnd_toEndOf="@id/etSenha"
        app:layout_constraintTop_toTopOf="@id/etSenha"
        app:layout_constraintVertical_bias="0.416" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/afacadsemibold"
        android:text="@string/senha"
        android:textColor="#7C7C7C"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <Button
        android:id="@+id/buttonEntrar"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="256dp"
        android:backgroundTint="#FE8C00"
        android:fontFamily="@font/afacadbold"
        android:text="@string/criar_conta"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etSenha" />

    <TextView
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginBottom="36dp"
        android:fontFamily="@font/afacadsemibold"
        android:text="@string/j_tem_uma_conta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="36dp"
        android:fontFamily="@font/afacadsemibold"
        android:text="@string/entrar"
        android:textColor="#FE8C00"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/todo"
        android:background="@android:color/transparent"
        android:src="@drawable/baseline_arrow_back_ios_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
