<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.OngConfirmationFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="207dp"
        android:layout_height="197dp"
        android:layout_marginTop="108dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_circle_24_1" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:srcCompat="@drawable/baseline_circle_24_2" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:srcCompat="@drawable/baseline_check_24" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="364dp"
        android:layout_height="64dp"
        android:layout_marginTop="12dp"
        android:text="@string/doa_o_conclu_da"
        android:fontFamily="@font/afacadbold"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="364dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/obrigado_por_fazer_parte_dessa_corrente_do_bem_sua_contribui_o_faz_toda_a_diferen_a_na_vida_de_quem_precisa"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/afacadmedium"
        android:lineSpacingMultiplier="1.4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="327dp"
        android:layout_height="80dp"
        android:layout_marginTop="140dp"
        android:backgroundTint="#FE8C00"
        android:text="@string/voltar_ao_in_cio"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:fontFamily="@font/afacadbold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>